# nerv

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build-win.ps1  build.bat  build.sh  readme.md  run(待修改).bat  总部结构.ppt
cmake/: CopyOutputs.cmake  EvaDetect.cmake  EvaPaths.cmake
docker/linux-arm64/: Dockerfile  docker-compose.yml
docker/linux-x86_64/: Dockerfile-cpu  Dockerfile-cuda  docker-compose.yml
llama.cpp/: CMakeLists.txt  CMakePresets.json
llama.cpp/common/: CMakeLists.txt
nerv-docker/: 在这里放置构建镜像的dockerfile文件.txt
stable-diffusion.cpp/: stable-diffusion.cpp
stable-diffusion.cpp/ggml/: CMakeLists.txt
whisper.cpp/: CMakeLists.txt
whisper.cpp/examples/server/: httplib.h
